add a handful of http requests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ wechat.url.login=${wechat.url.login_base}/cgi-bin/mmwebwx-bin/login?loginicon=tr
 wechat.url.init="%s/webwxinit?r=%s&pass_ticket=%s"
 wechat.url.sync_check=%s/synccheck?uin=%s&sid=%s&skey=%s&deviceid=%s&r=%s&synckey=%s&_=%s
 wechat.url.sync=%s/webwxsync?sid=%s&skey=%s&pass_ticket=%s
-wechat.url.get_contact=%s/webwxgetcontact
+wechat.url.get_contact=%s/webwxgetcontact?r=%s&seq=0&skey=%s
 wechat.url.send_msg=%s/webwxsendmsg
 wechat.url.upload_media=%s/webwxuploadmedia?f=json
 wechat.url.get_msg_img=%s/webwxgetmsgimg
