add a handful of http requests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ wechat.url.batch_get_contact=%s/webwxbatchgetcontact?type=ex&r=%s&lang=zh_CN&pas
 wechat.url.op_log=%s/webwxoplog?lang=zh_CN&pass_ticket=%s
 wechat.url.verify_user=%s/webwxverifyuser?r=%s&lang=zh_CN&pass_ticket=%s
 wechat.url.get_media=%s/webwxgetmedia
+
+wechat.ua=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.71 Safari/537.36
