--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ wechat.url.uuid=${wechat.url.login_base}/jslogin?appid=wx782c26e4c19acffb&fun=ne
 wechat.url.qrcode=${wechat.url.login_base}/qrcode
 wechat.url.status_notify=${wechat.url.login_base}/webwxstatusnotify?lang=zh_CN&pass_ticket=%s
 wechat.url.login=${wechat.url.login_base}/cgi-bin/mmwebwx-bin/login?loginicon=true&uuid=%s&tip=0&r=%s&_=%s
-wechat.url.init="%s/webwxinit?r=%s&pass_ticket=%s"
+wechat.url.init=%s/webwxinit?r=%s
 wechat.url.sync_check=%s/synccheck?uin=%s&sid=%s&skey=%s&deviceid=%s&r=%s&synckey=%s&_=%s
 wechat.url.sync=%s/webwxsync?sid=%s&skey=%s&pass_ticket=%s
 wechat.url.get_contact=%s/webwxgetcontact?r=%s&seq=0&skey=%s
@@ -20,3 +20,8 @@ wechat.url.verify_user=%s/webwxverifyuser?r=%s&lang=zh_CN&pass_ticket=%s
 wechat.url.get_media=%s/webwxgetmedia
 
 wechat.ua=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.71 Safari/537.36
+
+log4j.rootLogger=INFO, stdout
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern = %d %-5p => %m%n
