finish all requests of login process

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,28 @@
 wechat.url.login_base=https://login.weixin.qq.com
+wechat.url.path_base=/cgi-bin/mmwebwx-bin
 wechat.url.uuid=${wechat.url.login_base}/jslogin?appid=wx782c26e4c19acffb&fun=new&lang=zh_CN&_=%s
 wechat.url.qrcode=${wechat.url.login_base}/qrcode
-wechat.url.status_notify=${wechat.url.login_base}/webwxstatusnotify?lang=zh_CN&pass_ticket=%s
-wechat.url.login=${wechat.url.login_base}/cgi-bin/mmwebwx-bin/login?loginicon=true&uuid=%s&tip=0&r=%s&_=%s
-wechat.url.init=%s/webwxinit?r=%s
-wechat.url.sync_check=%s/synccheck?uin=%s&sid=%s&skey=%s&deviceid=%s&r=%s&synckey=%s&_=%s
-wechat.url.sync=%s/webwxsync?sid=%s&skey=%s&pass_ticket=%s
-wechat.url.get_contact=%s/webwxgetcontact?r=%s&seq=0&skey=%s
-wechat.url.send_msg=%s/webwxsendmsg
-wechat.url.upload_media=%s/webwxuploadmedia?f=json
-wechat.url.get_msg_img=%s/webwxgetmsgimg
-wechat.url.get_voice=%s/webwxgetvoice
-wechat.url.get_video=%s/webwxgetvideo
-wechat.url.push_login=%s/webwxpushloginurl
-wechat.url.logout=%s/webwxlogout?redirect=1&type=1&skey=%s
-wechat.url.batch_get_contact=%s/webwxbatchgetcontact?type=ex&r=%s&lang=zh_CN&pass_ticket=%s
-wechat.url.op_log=%s/webwxoplog?lang=zh_CN&pass_ticket=%s
-wechat.url.verify_user=%s/webwxverifyuser?r=%s&lang=zh_CN&pass_ticket=%s
-wechat.url.get_media=%s/webwxgetmedia
+wechat.url.login=${wechat.url.login_base}${wechat.url.path_base}/login?loginicon=true&uuid=%s&tip=0&r=%s&_=%s
+wechat.url.init=%s${wechat.url.path_base}/webwxinit?r=%s&pass_ticket=%s
+wechat.url.status_notify=%s${wechat.url.path_base}/webwxstatusnotify?lang=zh_CN&pass_ticket=%s
+wechat.url.sync_check=%s${wechat.url.path_base}/synccheck?uin=%s&sid=%s&skey=%s&deviceid=%s&r=%s&synckey=%s&_=%s
+wechat.url.sync=%s${wechat.url.path_base}/webwxsync?sid=%s&skey=%s&pass_ticket=%s
+wechat.url.get_contact=%s${wechat.url.path_base}/webwxgetcontact?r=%s&seq=0&skey=%s
+wechat.url.send_msg=%s${wechat.url.path_base}/webwxsendmsg
+wechat.url.upload_media=%s${wechat.url.path_base}/webwxuploadmedia?f=json
+wechat.url.get_msg_img=%s${wechat.url.path_base}/webwxgetmsgimg
+wechat.url.get_voice=%s${wechat.url.path_base}/webwxgetvoice
+wechat.url.get_video=%s${wechat.url.path_base}/webwxgetvideo
+wechat.url.push_login=%s${wechat.url.path_base}/webwxpushloginurl
+wechat.url.logout=%s${wechat.url.path_base}/webwxlogout?redirect=1&type=1&skey=%s
+wechat.url.batch_get_contact=%s${wechat.url.path_base}/webwxbatchgetcontact?type=ex&r=%s&lang=zh_CN&pass_ticket=%s
+wechat.url.op_log=%s${wechat.url.path_base}/webwxoplog?lang=zh_CN&pass_ticket=%s
+wechat.url.verify_user=%s${wechat.url.path_base}/webwxverifyuser?r=%s&lang=zh_CN&pass_ticket=%s
+wechat.url.get_media=%s${wechat.url.path_base}/webwxgetmedia
 
 wechat.ua=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.71 Safari/537.36
 
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=DEBUG, stdout
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = %d %-5p => %m%n
