--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ wechat.url.init=%s${wechat.url.path_base}/webwxinit?r=%s&pass_ticket=%s
 wechat.url.status_notify=%s${wechat.url.path_base}/webwxstatusnotify?lang=zh_CN&pass_ticket=%s
 wechat.url.sync_check=%s${wechat.url.path_base}/synccheck?uin=%s&sid=%s&skey=%s&deviceid=%s&r=%s&synckey=%s&_=%s
 wechat.url.sync=%s${wechat.url.path_base}/webwxsync?sid=%s&skey=%s&pass_ticket=%s
-wechat.url.get_contact=%s${wechat.url.path_base}/webwxgetcontact?r=%s&seq=0&skey=%s
+wechat.url.get_contact=%s${wechat.url.path_base}/webwxgetcontact?r=%s&seq=%s&skey=%s
 wechat.url.send_msg=%s${wechat.url.path_base}/webwxsendmsg
 wechat.url.upload_media=%s${wechat.url.path_base}/webwxuploadmedia?f=json
 wechat.url.get_msg_img=%s${wechat.url.path_base}/webwxgetmsgimg
