--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ wechat.url.qrcode=${wechat.url.login_base}/qrcode
 wechat.url.login=${wechat.url.login_base}${wechat.url.path_base}/login?loginicon=true&uuid=%s&tip=0&r=%s&_=%s
 wechat.url.init=%s${wechat.url.path_base}/webwxinit?r=%s&pass_ticket=%s
 wechat.url.status_notify=%s${wechat.url.path_base}/webwxstatusnotify?lang=zh_CN&pass_ticket=%s
-wechat.url.sync_check=%s${wechat.url.path_base}/synccheck?uin=%s&sid=%s&skey=%s&deviceid=%s&r=%s&synckey=%s&_=%s
+wechat.url.sync_check=%s${wechat.url.path_base}/synccheck
 wechat.url.sync=%s${wechat.url.path_base}/webwxsync?sid=%s&skey=%s&pass_ticket=%s
 wechat.url.get_contact=%s${wechat.url.path_base}/webwxgetcontact?r=%s&seq=%s&skey=%s
 wechat.url.send_msg=%s${wechat.url.path_base}/webwxsendmsg
