support 1. set alias 2. accept friend 3. send message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,10 @@ wechat.url.push_login=%s${wechat.url.path_base}/webwxpushloginurl
 wechat.url.logout=%s${wechat.url.path_base}/webwxlogout?redirect=1&type=1&skey=%s
 wechat.url.batch_get_contact=%s${wechat.url.path_base}/webwxbatchgetcontact?type=ex&r=%s&lang=zh_CN&pass_ticket=%s
 wechat.url.op_log=%s${wechat.url.path_base}/webwxoplog?lang=zh_CN&pass_ticket=%s
-wechat.url.verify_user=%s${wechat.url.path_base}/webwxverifyuser?r=%s&lang=zh_CN&pass_ticket=%s
+wechat.url.verify_user=%s${wechat.url.path_base}/webwxverifyuser
 wechat.url.get_media=%s${wechat.url.path_base}/webwxgetmedia
-
 wechat.ua=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.71 Safari/537.36
-
 log4j.rootLogger=DEBUG, stdout
-log4j.appender.stdout = org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern = %d %-5p => %m%n
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d %-5p => %m%n
