--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,16 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>2.8.7</version>
         </dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.3.0</version>
+		</dependency>
     </dependencies>
 
 	<build>
