--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,12 @@
 			<artifactId>javase</artifactId>
 			<version>3.3.0</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.1</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
