--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,15 +19,12 @@ wechat.url.batch_get_contact=%s${wechat.url.path_base}/webwxbatchgetcontact?type
 wechat.url.op_log=%s${wechat.url.path_base}/webwxoplog?lang=zh_CN&pass_ticket=%s
 wechat.url.verify_user=%s${wechat.url.path_base}/webwxverifyuser
 wechat.url.get_media=%s${wechat.url.path_base}/webwxgetmedia
-wechat.ua=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.71 Safari/537.36
-log4j.rootLogger=DEBUG, stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %-5p => %m%n
+wechat.ua=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36
 
-logging.level.root=info
 logging.register-shutdown-hook=true
-logging.file=jeeves.log
-logging.path=.
+#logging.level.root=info
+#logging.file=jeeves.log
+#logging.path=.
 
-instance.id=jeeves
+instance-id=jeeves
+auto-relogin-when-qrcode-expired=true
