--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,5 @@ logging.register-shutdown-hook=true
 #logging.file=jeeves.log
 #logging.path=.
 
-instance-id=jeeves
-auto-relogin-when-qrcode-expired=true
+jeeves.instance-id=jeeves
+jeeves.auto-relogin-when-qrcode-expired=true
