--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ jdk: oraclejdk8
 
 sudo: required
 
+before_install:
+  - chmod +x mvnw
+
 # Code coverage
 after_success:
   - bash <(curl -s https://codecov.io/bash)
