--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ wechat.url.path_base=/cgi-bin/mmwebwx-bin
 wechat.url.uuid=${wechat.url.login_base}/jslogin?appid=wx782c26e4c19acffb&fun=new&lang=zh_CN&_=%s
 wechat.url.qrcode=${wechat.url.login_base}/qrcode
 wechat.url.login=${wechat.url.login_base}${wechat.url.path_base}/login?loginicon=true&uuid=%s&tip=0&r=%s&_=%s
-wechat.url.init=%s${wechat.url.path_base}/webwxinit?r=%s&pass_ticket=%s
-wechat.url.status_notify=%s${wechat.url.path_base}/webwxstatusnotify?lang=zh_CN&pass_ticket=%s
+wechat.url.init=%s${wechat.url.path_base}/webwxinit?r=%s
+wechat.url.status_notify=%s${wechat.url.path_base}/webwxstatusnotify
 wechat.url.sync_check=%s${wechat.url.path_base}/synccheck
-wechat.url.sync=%s${wechat.url.path_base}/webwxsync?sid=%s&skey=%s&pass_ticket=%s
+wechat.url.sync=%s${wechat.url.path_base}/webwxsync?sid=%s&skey=%s
 wechat.url.get_contact=%s${wechat.url.path_base}/webwxgetcontact?r=%s&seq=%s&skey=%s
 wechat.url.send_msg=%s${wechat.url.path_base}/webwxsendmsg
 wechat.url.upload_media=%s${wechat.url.path_base}/webwxuploadmedia?f=json
@@ -15,11 +15,11 @@ wechat.url.get_voice=%s${wechat.url.path_base}/webwxgetvoice
 wechat.url.get_video=%s${wechat.url.path_base}/webwxgetvideo
 wechat.url.push_login=%s${wechat.url.path_base}/webwxpushloginurl
 wechat.url.logout=%s${wechat.url.path_base}/webwxlogout?redirect=1&type=1&skey=%s
-wechat.url.batch_get_contact=%s${wechat.url.path_base}/webwxbatchgetcontact?type=ex&r=%s&lang=zh_CN&pass_ticket=%s
-wechat.url.op_log=%s${wechat.url.path_base}/webwxoplog?lang=zh_CN&pass_ticket=%s
+wechat.url.batch_get_contact=%s${wechat.url.path_base}/webwxbatchgetcontact?type=ex&r=%s
+wechat.url.op_log=%s${wechat.url.path_base}/webwxoplog
 wechat.url.verify_user=%s${wechat.url.path_base}/webwxverifyuser
 wechat.url.get_media=%s${wechat.url.path_base}/webwxgetmedia
-wechat.url.create_chatroom=%s${wechat.url.path_base}/webwxcreatechatroom?r=%s&pass_ticket=%s
+wechat.url.create_chatroom=%s${wechat.url.path_base}/webwxcreatechatroom?r=%s
 wechat.ua=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36
 
 logging.register-shutdown-hook=true
