--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ wechat.url.op_log=%s${wechat.url.path_base}/webwxoplog
 wechat.url.verify_user=%s${wechat.url.path_base}/webwxverifyuser
 wechat.url.get_media=%s${wechat.url.path_base}/webwxgetmedia
 wechat.url.create_chatroom=%s${wechat.url.path_base}/webwxcreatechatroom?r=%s
+wechat.url.delete_chatroom_member=%s${wechat.url.path_base}/webwxupdatechatroom?fun=delmember
 wechat.ua=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36
 
 logging.register-shutdown-hook=true
