1. implement HeaderUtils 2. add headers to request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+wechat.url.entry=https://wx.qq.com/
 wechat.url.login_base=https://login.weixin.qq.com
 wechat.url.path_base=/cgi-bin/mmwebwx-bin
 wechat.url.uuid=${wechat.url.login_base}/jslogin?appid=wx782c26e4c19acffb&fun=new&lang=zh_CN&_=%s
