1. use custom header 2. add statreport and redirect to mimic the behavior of browsers.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ wechat.url.uuid=${wechat.url.login_base}/jslogin?appid=wx782c26e4c19acffb&fun=ne
 wechat.url.qrcode=${wechat.url.login_base}/qrcode
 wechat.url.login=${wechat.url.login_base}${wechat.url.path_base}/login?loginicon=true&uuid=%s&tip=0&r=%s&_=%s
 wechat.url.init=%s${wechat.url.path_base}/webwxinit?r=%s
+wechat.url.statreport=${wechat.url.entry}${wechat.url.path_base}/webwxstatreport?fun=new
 wechat.url.status_notify=%s${wechat.url.path_base}/webwxstatusnotify
 wechat.url.sync_check=%s${wechat.url.path_base}/synccheck
 wechat.url.sync=%s${wechat.url.path_base}/webwxsync?sid=%s&skey=%s
