1. add image message handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ wechat.url.sync=%s${wechat.url.path_base}/webwxsync?sid=%s&skey=%s
 wechat.url.get_contact=%s${wechat.url.path_base}/webwxgetcontact?r=%s&seq=%s&skey=%s
 wechat.url.send_msg=%s${wechat.url.path_base}/webwxsendmsg
 wechat.url.upload_media=%s${wechat.url.path_base}/webwxuploadmedia?f=json
-wechat.url.get_msg_img=%s${wechat.url.path_base}/webwxgetmsgimg
+wechat.url.get_msg_img=%s${wechat.url.path_base}/webwxgetmsgimg?&MsgID=%s&skey=%s
 wechat.url.get_voice=%s${wechat.url.path_base}/webwxgetvoice
 wechat.url.get_video=%s${wechat.url.path_base}/webwxgetvideo
 wechat.url.push_login=%s${wechat.url.path_base}/webwxpushloginurl
