1. extend message handler 2. add refreshTimes to cookie store 3. fix bugs in utils

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,4 @@ logging.register-shutdown-hook=true
 
 jeeves.instance-id=jeeves
 jeeves.auto-relogin-when-qrcode-expired=true
+jeeves.max-qr-refresh-times=5
